--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,9 @@
 fastapi>=0.95
 uvicorn[standard]>=0.20
-openai>=0.27
+openai>=1.0
+anthropic>=0.7
+google-generativeai>=0.3
 python-dotenv>=1.0
-google-genai
 # Optional tooling for extracting statements from websites
 playwright>=1.40
 requests>=2.28
@@ -10,5 +11,4 @@ pandas>=1.5
 plotly>=5.0
 streamlit>=1.20
 numpy>=1.26
-pandas>=2.2
 matplotlib>=3.8
