--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,8 @@ anthropic>=0.7
 google-generativeai>=0.3
 python-dotenv>=1.0
 psycopg2-binary>=2.9
+psycopg2
+os
 # Optional tooling for extracting statements from websites
 playwright>=1.40
 requests>=2.28
